Completed Maven structure overhaul.  All dependencies are now managed by maven via the .pom.
 The path /api/ is currently secured by spring security and can be
accessed by posting user credentials to
/j_spring_security_check?j_username=user&j_password=userPass.  The
response should give a 200 ok code and a session cookie.  You may then
use the cookie to access pages behind /api/.

--- a/src/main/webapp/LoginForm.html
+++ b/src/main/webapp/LoginForm.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form action="REST/WebService/login" method="post" >
+<form action="rest/WebService/login" method="post" >
  Username:<input name="username" type="text"><br/>
  Password:<input name="password" type="password"><br/>
  <input type="submit" value="Submit">
